Refactor account and transaction handling for improved clarity and consistency, including renaming repositories, updating method signatures, and enhancing dashboard metrics